# CyberRiskIntelligencePlatform

./: .gitignore  README.md  index.html
ml/: app.py  columnas_dataset_explicacion.html  inspeccionarcatelogo.py  pipeLine.ipynb  predictor.py  pyproject.toml  tech-catalog.json
ml/data/: model_metadata.json
ml/inputs/: 17501f1f-2b70-4e70-9ee7-8711471a2724.json  2b6db4bd-26f3-4b9e-bc3c-3127b709a89e.json  359defbc-ed71-4c26-8c87-02506dbaad72.json  5742908d-def3-4c4c-be15-c4402846c528.json  874f0329-4d05-42cf-8a63-11c0cd14370a.json  92c6cd24-cda6-4132-b7cd-8b0ea9197d8c.json  aaa6d41f-51cb-45a9-802a-599e7ffc1aee.json  bdccefd4-23b9-4956-975f-409a7f9c959a.json  db9491fd-bc8a-4695-9b4f-52c39c2eb5e0.json  e8c89477-7c0e-43e2-957f-438b496fc1cf.json
ml/notebooks/: DF_Camilo.ipynb  exploracion.ipynb  exploracionV2.ipynb
ml/outputs/: 031d6ae8-09ce-4746-ac09-f9359c0f8c4a_result.json  0b5bdc6b-451b-4b2d-ba35-95a6b8482d23_result.json  1cfddef5-a685-43c1-ad0e-83a011a74ec6_result.json  22956e95-5719-4cc4-841b-fc01aac1c997_result.json  251493ce-db98-430b-a8fc-31ce0bc65bc7_result.json  29d1bfdb-1174-42c0-b761-aeed8f51d66c_result.json  3064586b-ad13-4d8c-98dc-39ce2a88098e_result.json  33903fe7-5e78-40ac-8801-07a7471b95d8_result.json  3c4c8b7d-9bad-4163-a913-83cbc08d8c8c_result.json  3ea8961f-f270-46d4-bc68-becc9c1c9655_result.json  40b005e9-5f5c-4b53-b410-58343dfbdd60_result.json  41fc1d7f-c98d-4d86-a014-faa80696c3e9_result.json  51061c13-27f5-4090-9029-f44885df3762_result.json  60fdea11-ab5a-413a-a2b8-9a7e8f481adf_result.json  689f60e8-9a37-43ab-a4de-1a277447fd9a_result.json  (+26 more)
(+47 files in other folders)
